--- a/Ex1326.html
+++ b/Ex1326.html
@@ -7,3 +7,24 @@ b) Ao clicar em "Verificar situação", calcule sua média e...
 c) Caso a média seja a partir de 6, exiba um alert com "Parabéns, aprovado!"
 
 d) Caso a média seja menor que 6, exiba um alert com "Tente outra vez..."  -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ex1326</title>
+
+</head>
+<body>
+    <h1>Calculadora de média</h1>
+    Informe suas notas <br>
+    1ª Nota : <input type="text" id="in_nota1">
+    2ª Nota : <input type="text" id="in_nota2">
+    <button onclick="verifi()">Verificar situação</button>
+    <div id="div_mensagem"></div>
+
+</body>
+</html>
+<script></script>
