--- a/Ex0926.html
+++ b/Ex0926.html
@@ -1,5 +1,7 @@
-<!-- 9. Estima-se que os usuários de conteúdo de Streaming gastem cerca de 100 milhões de horas por dia nesse tipo de entretenimento.
-Em média um episódio de seriado americano do estilo SITCOM (Friends, How I Met Your Mother, Dois Homens e Meio, etc.) tem 22min de duração.
+<!-- 9. Estima-se que os usuários de conteúdo de Streaming gastem cerca de 100 milhões de horas por dia nesse tipo de 
+entretenimento.
+Em média um episódio de seriado americano do estilo SITCOM (Friends, How I Met Your Mother, Dois Homens e Meio, etc.) 
+tem 22min de duração.
 Sabendo disso, crie um programa o qual:
 a) Peça ao usuário para informar a última série (SITCOM) que ele assistiu.
 b) Peça ao usuário para informar o total de episódios que ele já assistiu da série.
@@ -20,6 +22,24 @@ Obs* Considere 22min como o tempo de duração de 1 episódio.
     <title>Ex0926</title>
  </head>
  <body>
-    
+    <h1>SITCOM</h1>
+    Qual a última série que você assistiu? <input type="text" id="in_serie"> <br>
+    Quantos episódios você já assistiu dessa série? <input type="text" id="in_serieHoras"> <br>
+    <button onclick="verifi()">Verificar nível</button> <br>
+    <div id="div_exibir"></div>
  </body>
  </html>
+ <script>
+   function verifi(){
+      var serie=(in_serie.value)
+      var horas=Number(in_serieHoras.value)
+      if (horas>30){
+         div_exibir.innerHTML = `Vejo que você gosta da série ${in_serie.value}<br>` 
+         div_exibir.innerHTML += "Uau Você realmente gosta dessa série!"
+      }
+      else {
+         div_exibir.innerHTML = `Vejo que você gosta da série ${serie}`
+
+      }
+   }
+ </script>
